--- a/semana09/dia03-01-student-list-reto/package.json
+++ b/semana09/dia03-01-student-list-reto/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
+    "boring-avatars": "^1.11.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
