--- a/semana10/dia03-01-react-student-list-fetch-api/package.json
+++ b/semana10/dia03-01-react-student-list-fetch-api/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "sweetalert2": "^11.16.0",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
