--- a/semana10/dia03-01-react-movies-crud-app/package.json
+++ b/semana10/dia03-01-react-movies-crud-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6"
