--- a/semana10/dia03-01-react-movies-crud-app/package.json
+++ b/semana10/dia03-01-react-movies-crud-app/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api": "json-server --watch db.json"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
